Add example sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-      <h1>[Project Topic Here]</h1>
-      <p>This website is currently being constructed by [Your Name Here].</p>
+      <h1>Internatinoal Baccalaureate Changed My Life</h1>
+      <p>This website is currently being constructed by Clarence Smith.</p>
+      <div id="section-1" class="section">
+        <p class="sub-section">
+          I went to an IB School from the 10th to 12th grade. I believe that my life would be different mostly because it really prepared me for college and made the next 5 years of my life easier.
+        </p>
+        <p class="sub-section">
+          I was TERRIBLE at writing essays. The IB school mostly prepared me to write essays at the college level.
+        </p>
+      </div>
   </body>
 </html>
